# fastapi-docker-ebac

./: Dockerfile  README.md  README_DIAGRAMA.md  docker-compose.yml  main.py  pyproject.toml
