[tool.poetry]
name = "fastapi-docker-app"
version = "0.1.0"
description = "Aplicação FastAPI rodando em Docker com Poetry"
authors = ["Caio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"